Add image and video folders and put a video

--- a/LandingPage.css
+++ b/LandingPage.css
@@ -16,6 +16,11 @@ body{
 	border-style: solid;
 }
 
-#NoLink{
+.NoLink{
     text-decoration: none;
+}
+
+.avatar{
+	width: 110px;
+	height: 107px;
 }
