Add YouTube, Teammates and contac sections.

--- a/LandingPage.css
+++ b/LandingPage.css
@@ -1,5 +1,5 @@
 body{
-    background-color:bisque;
+    background-color:#EBEDF2;
 }
 
 #w-full{
@@ -18,9 +18,25 @@ body{
 
 .NoLink{
     text-decoration: none;
+	color: white;
 }
 
 .avatar{
 	width: 110px;
 	height: 107px;
 }
+
+.MarginVideoStyle{
+	background-color: #6E30F2;
+	border-radius: 21px 21px 21px 21px;
+	width: 70%; 
+	height: 400px;  
+	margin-bottom: 10px;
+}
+
+.CardStyle{
+	background-color: #ACB0F2;
+	width: 50%;
+	border-radius: 10px 10px 10px 10px;
+}
+
