--- a/LandingPage.css
+++ b/LandingPage.css
@@ -33,8 +33,8 @@ body{
 .MarginVideoStyle{
 	background-color: #191716;
 	border-radius: 21px 21px 21px 21px;
-	width: 70%; 
-	height: 400px;  
+	width: 60%; 
+	height: 60%;
 	margin-bottom: 10px;
 }
 
