--- a/LandingPage.css
+++ b/LandingPage.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap');
+
 body{
     background-color: #FBFFF1;
 }
@@ -44,3 +47,10 @@ body{
 	border-radius: 10px 10px 10px 10px;
 }
 
+p{
+	font-family: 'Lato';
+}
+
+h2,h4{
+	font-family: 'Lato:wgth@900',sans-serif;
+}
