--- a/LandingPage.css
+++ b/LandingPage.css
@@ -43,15 +43,30 @@ body{
 }
 
 .CardStyle{
-	background-color: #ACB0F2;
+	background-color: #191716;
 	width: 50%;
 	border-radius: 10px 10px 10px 10px;
 }
 
 p{
-	font-family: 'Lato';
+	font-family: 'Lato', sans-serif;
 }
 
 h2,h3,h4{
 	font-family: 'Lato',sans-serif;
+}
+
+figcaption{
+	text-align: center;
+	margin: auto;
+	color: #7a7a7a;
+}
+
+.SizeProfilPhoto{
+	width: 150px;
+	height: 150px;
+}
+
+.fs14{
+	font-size: 14px;
 }
