--- a/LandingPage.css
+++ b/LandingPage.css
@@ -47,10 +47,11 @@ body{
 	margin-bottom: 10px;
 }
 
-.CardStyle{
+.CardStyleUp{
 	background-color: #191716;
 	width: 50%;
-	border-radius: 10px 10px 10px 10px;
+	border-radius: 20px 20px 0px 0px;
+	color: white;
 }
 
 a,p{
